--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
   }
 }
 </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5223640698250535"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
