--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     content="Convertisseur en ligne tout-en-un : distance, température, devises et plus. Gratuit, rapide et facile à utiliser.">
   <meta name="keywords"
     content="convertisseur, distance, température, devises, poids, km en miles, euro en dollar, celsius en fahrenheit">
-
+  <meta property="og:description" content="Convertissez facilement distances, températures, devises et poids.">
+  <meta property="og:url" content="https://convertisseur-tout-en-un.vercel.app/">
+  <meta property="og:type" content="website">
   <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
   <link rel="stylesheet" href="style.css">
