--- a/index.html
+++ b/index.html
@@ -117,12 +117,18 @@
 
     <!-- Emplacement pour pub AdSense -->
     <div class="ads">
-      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-XXXXXXXXXXXX" data-ad-slot="YYYYYYYYYY"
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5223640698250535"
+        crossorigin="anonymous"></script>
+      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5223640698250535" data-ad-slot="6800404536"
         data-ad-format="auto" data-full-width-responsive="true"></ins>
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
   </div>
+
+  <!-- Bloc annonnce -->
+
 
   <script type="text/javascript" src="script.js"></script>
   <script type="application/ld+json">
