ajout dinar et dihram

--- a/index.html
+++ b/index.html
@@ -71,26 +71,29 @@
 
       <label for="fromCurrency">De :</label>
       <select id="fromCurrency">
-        <option value="USD">Dollar (USD)</option>
-        <option value="EUR" selected>Euro (EUR)</option>
-        <option value="GBP">Livre (GBP)</option>
-        <option value="JPY">Yen (JPY)</option>
-        <option value="CHF">Franc Suisse (CHF)</option>
-        <option value="CAD">Dollar Canadien (CAD)</option>
-        <option value="AUD">Dollar Australien (AUD)</option>
+        <option value="USD">Dollar $</option>
+        <option value="EUR" selected>Euro €</option>
+        <option value="GBP">Livre £</option>
+        <option value="JPY">Yen ¥</option>
+        <option value="CHF">Franc Suisse CHF</option>
+        <option value="CAD">Dollar Canadien C$</option>
+        <option value="AUD">Dollar Australien A$</option>
+        <option value="MAD">Dirham د.م MAD</option>
+        <option value="DZD">Dinhar د.ج DZD</option>
         <!-- Ajoute d'autres devises ici -->
       </select>
 
       <label for="toCurrency">Vers :</label>
       <select id="toCurrency">
-        <option value="USD">Dollar (USD)</option>
-        <option value="EUR">Euro (EUR)</option>
-        <option value="GBP" selected>Livre (GBP)</option>
-        <option value="JPY">Yen (JPY)</option>
-        <option value="CHF">Franc Suisse (CHF)</option>
-        <option value="CAD">Dollar Canadien (CAD)</option>
-        <option value="AUD">Dollar Australien (AUD)</option>
-        <!-- Ajoute d'autres devises ici -->
+        <option value="USD">Dollar $</option>
+        <option value="EUR" selected>Euro €</option>
+        <option value="GBP">Livre £</option>
+        <option value="JPY">Yen ¥</option>
+        <option value="CHF">Franc Suisse CHF</option>
+        <option value="CAD">Dollar Canadien C$</option>
+        <option value="AUD">Dollar Australien A$</option>
+        <option value="MAD">Dirham د.م MAD</option>
+        <option value="DZD">Dinhar د.ج DZD</option>
       </select>
 
       <label for="amount">Montant :</label>
