--- a/index.html
+++ b/index.html
@@ -71,29 +71,29 @@
 
       <label for="fromCurrency">De :</label>
       <select id="fromCurrency">
-        <option value="USD">Dollar $</option>
-        <option value="EUR" selected>Euro €</option>
-        <option value="GBP">Livre £</option>
-        <option value="JPY">Yen ¥</option>
-        <option value="CHF">Franc Suisse CHF</option>
-        <option value="CAD">Dollar Canadien C$</option>
-        <option value="AUD">Dollar Australien A$</option>
-        <option value="MAD">Dirham د.م MAD</option>
-        <option value="DZD">Dinhar د.ج DZD</option>
+        <option value="USD">Dollar 🇺🇸</option>
+        <option value="EUR" selected>Euro 🇪🇺</option>
+        <option value="GBP">Livre 🇬🇧</option>
+        <option value="JPY">Yen 🇯🇵</option>
+        <option value="CHF">Franc Suisse 🇨🇭</option>
+        <option value="CAD">Dollar Canadien 🇨🇦</option>
+        <option value="AUD">Dollar Australien 🇦🇺</option>
+        <option value="MAD">Dirham 🇲🇦</option>
+        <option value="DZD">Dinhar 🇩🇿</option>
         <!-- Ajoute d'autres devises ici -->
       </select>
 
       <label for="toCurrency">Vers :</label>
       <select id="toCurrency">
-        <option value="USD">Dollar $</option>
-        <option value="EUR" selected>Euro €</option>
-        <option value="GBP">Livre £</option>
-        <option value="JPY">Yen ¥</option>
-        <option value="CHF">Franc Suisse CHF</option>
-        <option value="CAD">Dollar Canadien C$</option>
-        <option value="AUD">Dollar Australien A$</option>
-        <option value="MAD">Dirham د.م MAD</option>
-        <option value="DZD">Dinhar د.ج DZD</option>
+        <option value="USD">Dollar 🇺🇸</option>
+        <option value="EUR" selected>Euro 🇪🇺</option>
+        <option value="GBP">Livre 🇬🇧</option>
+        <option value="JPY">Yen 🇯🇵</option>
+        <option value="CHF">Franc Suisse 🇨🇭</option>
+        <option value="CAD">Dollar Canadien 🇨🇦</option>
+        <option value="AUD">Dollar Australien 🇦🇺</option>
+        <option value="MAD">Dirham 🇲🇦</option>
+        <option value="DZD">Dinhar 🇩🇿</option>
       </select>
 
       <label for="amount">Montant :</label>
