--- a/convertisseur-temperature/index.html
+++ b/convertisseur-temperature/index.html
@@ -14,7 +14,7 @@
     <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
     <link rel="stylesheet" href="/../public/style/style.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="../favicon.png">
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
