--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website">
   <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
-  <link rel="stylesheet" href="public/style/style.css">
+  <link rel="stylesheet" href="style/style.css">
   <link rel="icon" type="image/png" href="favicon.png">
    <script type="application/ld+json">
 {
@@ -46,10 +46,10 @@
   <nav class="sidebar">
     <h2>Catégories</h2>
     <ul>
-      <li><a href="/convertisseur-distance/index.html">Distance</a></li>
-      <li><a href="/convertisseur-temperature/index.html">Température</a></li>
+      <li><a href="../convertisseur-distance/index.html">Distance</a></li>
+      <li><a href="../convertisseur-temperature/index.html">Température</a></li>
       <li><a href="index.html">Devises</a></li>
-      <li><a href="/convertisseur-poids/index.html">Poids</a></li>
+      <li><a href="../convertisseur-poids/index.html">Poids</a></li>
     </ul>
   </nav>
   <section class="section">
@@ -107,10 +107,10 @@
     <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
       <nav style="margin-bottom: 1rem;">
         <a href="/index.html">Convertisseur de devises</a> |
-        <a href="/convertisseur-poids/index.html">Convertisseur de poids</a> |
-        <a href="/convertisseur-temperature/index.html">Convertisseur de température</a> |
-        <a href="/a-propos/index.html">À propos</a> |
-        <a href="/mention-legales/index.html">Mentions légales</a>
+        <a href="../convertisseur-poids/index.html">Convertisseur de poids</a> |
+        <a href="../convertisseur-temperature/index.html">Convertisseur de température</a> |
+        <a href="../a-propos/index.html">À propos</a> |
+        <a href="../mention-legales/index.html">Mentions légales</a>
       </nav>
 
       <p>
@@ -130,7 +130,7 @@
   <!-- Bloc annonnce -->
 
 
-  <script type="text/javascript" src="public/js/script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
  
 </body>
 
