--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
   <nav class="sidebar">
     <h2>Catégories</h2>
     <ul>
-      <li><a href="/convertisseur-distance/index.html">Distance</a></li>
-      <li><a href="/convertisseur-temperature/index.html">Température</a></li>
-      <li><a href="index.html">Devises</a></li>
-      <li><a href="/convertisseur-poids/index.html">Poids</a></li>
+      <li><a href="/convertisseur-distance">Distance</a></li>
+      <li><a href="/convertisseur-temperature">Température</a></li>
+      <li><a href="/">Devises</a></li>
+      <li><a href="/convertisseur-poids">Poids</a></li>
     </ul>
   </nav>
   <section class="section">
@@ -106,8 +106,8 @@
 
     <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
       <nav style="margin-bottom: 1rem;">
-        <a href="/index.html">Convertisseur de devises</a> |
-        <a href="/convertisseur-poids/index.html">Convertisseur de poids</a> |
+        <a href="/">Convertisseur de devises</a> |
+        <a href="/convertisseur-poids">Convertisseur de poids</a> |
         <a href="/convertisseur-temperature/index.html">Convertisseur de température</a> |
         <a href="/a-propos/index.html">À propos</a> |
         <a href="/mention-legales/index.html">Mentions légales</a>
