--- a/public/index.html
+++ b/public/index.html
@@ -106,11 +106,12 @@
 
     <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
       <nav style="margin-bottom: 1rem;">
-        <a href="/">Convertisseur de devises</a> |
-        <a href="/convertisseur-poids">Convertisseur de poids</a> |
-        <a href="/convertisseur-temperature/index.html">Convertisseur de température</a> |
-        <a href="/a-propos/index.html">À propos</a> |
-        <a href="/mention-legales/index.html">Mentions légales</a>
+        <li><a href="/convertisseur-distance">Distance</a></li> |
+        <li><a href="/convertisseur-temperature">Température</a></li> |
+        <li><a href="/">Devises</a></li> |
+        <li><a href="/convertisseur-poids">Poids</a></li> |
+        <a href="/a-propos">À propos</a> |
+        <a href="/mention-legales">Mentions légales</a>
       </nav>
 
       <p>
