--- a/public/convertisseur-temperature/index.html
+++ b/public/convertisseur-temperature/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
-    <link rel="stylesheet" href="/../public/style/style.css">
+    <link rel="stylesheet" href="/public/style/style.css">
     <link rel="icon" type="image/png" href="../favicon.png">
     <script type="application/ld+json">
 {
@@ -46,10 +46,10 @@
     <nav class="sidebar">
         <h2>Catégories</h2>
         <ul>
-            <li><a href="/convertisseur-distance/index.html">Distance</a></li>
-            <li><a href="/convertisseur-temperature/index.html">Température</a></li>
-            <li><a href="../index.html">Devises</a></li>
-            <li><a href="/convertisseur-poids/index.html">Poids</a></li>
+            <li><a href="/convertisseur-distance">Distance</a></li>
+            <li><a href="/convertisseur-temperature">Température</a></li>
+            <li><a href="/">Devises</a></li>
+            <li><a href="/convertisseur-poids">Poids</a></li>
         </ul>
     </nav>
     <section class="section">
@@ -105,7 +105,7 @@
     <!-- Bloc annonnce -->
 
 
-    <script type="text/javascript" src="/../public/js/script.js"></script>
+    <script type="text/javascript" src="/public/js/script.js"></script>
 
 
 </body>
