--- a/public/convertisseur-temperature/index.html
+++ b/public/convertisseur-temperature/index.html
@@ -13,8 +13,8 @@
     <meta property="og:type" content="website">
     <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
-    <link rel="stylesheet" href="/public/style/style.css">
-    <link rel="icon" type="image/png" href="../favicon.png">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -82,11 +82,12 @@
 
         <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
             <nav style="margin-bottom: 1rem;">
-                <a href="/index.html">Convertisseur de devises</a> |
-                <a href="/convertisseur-poids/index.html">Convertisseur de poids</a> |
-                <a href="/convertisseur-temperature/index.html">Convertisseur de température</a> |
-                <a href="/a-propos/index.html">À propos</a> |
-                <a href="/mention-legales/index.html">Mentions légales</a>
+                <a href="/convertisseur-distance">Distance</a> |
+                <a href="/convertisseur-temperature">Température</a> |
+                <a href="/">Devises</a> |
+                <a href="/convertisseur-poids">Poids</a> |
+                <a href="/a-propos">À propos</a> |
+                <a href="/mention-legales">Mentions légales</a>
             </nav>
 
             <p>
