--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
   <link rel="stylesheet" href="style/style.css">
-  <link rel="icon" type="image/png" href="../favicon.png">
+  <link rel="icon" type="image/png" href="/favicon.png">
    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -106,10 +106,10 @@
 
     <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
       <nav style="margin-bottom: 1rem;">
-        <li><a href="/convertisseur-distance">Distance</a></li> |
-        <li><a href="/convertisseur-temperature">Température</a></li> |
-        <li><a href="/">Devises</a></li> |
-        <li><a href="/convertisseur-poids">Poids</a></li> |
+        <a href="/convertisseur-distance">Distance</a> |
+        <a href="/convertisseur-temperature">Température</a> |
+        <a href="/">Devises</a> |
+        <a href="/convertisseur-poids">Poids</a> |
         <a href="/a-propos">À propos</a> |
         <a href="/mention-legales">Mentions légales</a>
       </nav>
