--- a/public/a-propos/index.html
+++ b/public/a-propos/index.html
@@ -46,10 +46,10 @@
     <nav class="sidebar">
         <h2>Catégories</h2>
         <ul>
-            <li><a href="/convertisseur-distance/index.html">Distance</a></li>
-            <li><a href="/convertisseur-temperature/index.html">Température</a></li>
-            <li><a href="../index.html">Devises</a></li>
-            <li><a href="/convertisseur-poids/index.html">Poids</a></li>
+             <li><a href="/convertisseur-distance">Distance</a></li>
+            <li><a href="/convertisseur-temperature">Température</a></li>
+            <li><a href="/">Devises</a></li>
+            <li><a href="/convertisseur-poids">Poids</a></li>
         </ul>
     </nav>
     <section class="section">
