--- a/public/convertisseur-poids/index.html
+++ b/public/convertisseur-poids/index.html
@@ -13,8 +13,8 @@
   <meta property="og:type" content="website">
   <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
-  <link rel="stylesheet" href="/../public/style/style.css">
-  <link rel="icon" type="image/png" href="../favicon.png">
+  <link rel="stylesheet" href="/style/style.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -105,7 +105,7 @@
   <!-- Bloc annonnce -->
 
 
-  <script type="text/javascript" src="/../public/js/script.js"></script>
+  <script type="text/javascript" src="/js/script.js"></script>
 
 </body>
 
