--- a/public/convertisseur-temperature/index.html
+++ b/public/convertisseur-temperature/index.html
@@ -106,7 +106,7 @@
     <!-- Bloc annonnce -->
 
 
-    <script type="text/javascript" src="/public/js/script.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
 
 
 </body>
