--- a/public/a-propos/index.html
+++ b/public/a-propos/index.html
@@ -100,11 +100,13 @@
 
         <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
             <nav style="margin-bottom: 1rem;">
-                <a href="/index.html">Convertisseur de devises</a> |
-                <a href="/convertisseur-poids/index.html">Convertisseur de poids</a> |
-                <a href="/convertisseur-temperature/index.html">Convertisseur de température</a> |
-                <a href="index.html">À propos</a> |
-                <a href="/mention-legales/index.html">Mentions légales</a>
+                <a href="/convertisseur-distance">Distance</a> |
+        <a href="/convertisseur-temperature">Température</a> |
+        <a href="/">Devises</a> |
+        <a href="/convertisseur-poids">Poids</a> |
+        <a href="/a-propos">À propos</a> |
+        <a href="/mention-legales">Mentions légales</a>
+      </nav>
             </nav>
 
             <p>
