balise meta google

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <meta property="og:description" content="Convertissez facilement distances, températures, devises et poids.">
   <meta property="og:url" content="https://convertisseur-tout-en-un.vercel.app/">
   <meta property="og:type" content="website">
+  <meta name="google-adsense-account" content="ca-pub-5223640698250535">
   <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
   <link rel="stylesheet" href="style/style.css">
