--- a/public/mention-legales/index.html
+++ b/public/mention-legales/index.html
@@ -11,10 +11,11 @@
     <meta property="og:description" content="Convertissez facilement distances, températures, devises et poids.">
     <meta property="og:url" content="https://convertisseur-tout-en-un.vercel.app/">
     <meta property="og:type" content="website">
+    <meta name="google-adsense-account" content="ca-pub-5223640698250535">
     <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
 
-    <link rel="stylesheet" href="/../public/style/style.css">
-    <link rel="icon" type="image/png" href="../favicon.png">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -46,10 +47,10 @@
     <nav class="sidebar">
         <h2>Catégories</h2>
         <ul>
-            <li><a href="/convertisseur-distance/index.html">Distance</a></li>
-            <li><a href="/convertisseur-temperature/index.html">Température</a></li>
-            <li><a href="../index.html">Devises</a></li>
-            <li><a href="/convertisseur-poids/index.html">Poids</a></li>
+            <li><a href="/convertisseur-distance">Distance</a></li>
+            <li><a href="/convertisseur-temperature">Température</a></li>
+            <li><a href="/">Devises</a></li>
+            <li><a href="/convertisseur-poids">Poids</a></li>
         </ul>
     </nav>
     <section class="section">
@@ -140,7 +141,7 @@
     <!-- Bloc annonnce -->
 
 
-    <script type="text/javascript" src="/../public/js/script.js"></script>
+   <script type="text/javascript" src="/js/script.js"></script>
 
 </body>
 
