modification pour google ad

--- a/public/confidentialite/index.html
+++ b/public/confidentialite/index.html
@@ -12,11 +12,11 @@
   <meta property="og:url" content="https://convertisseur-tout-en-un.vercel.app/">
   <meta property="og:type" content="website">
   <meta name="google-adsense-account" content="ca-pub-5223640698250535">
-  <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
+  <title>Convertisseur Tout-en-Un</title>
 
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="style/style.css">
   <link rel="icon" type="image/png" href="/favicon.png">
-  <script type="application/ld+json">
+   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "WebApplication",
@@ -47,30 +47,47 @@
   <nav class="sidebar">
     <h2>Catégories</h2>
     <ul>
-       <li><a href="/convertisseur-distance">Distance</a></li>
+      <li><a href="/convertisseur-distance">Distance</a></li>
       <li><a href="/convertisseur-temperature">Température</a></li>
       <li><a href="/">Devises</a></li>
       <li><a href="/convertisseur-poids">Poids</a></li>
     </ul>
   </nav>
   <section class="section">
-    <div class="main">
-      <h1>Convertisseur Tout-en-Un</h1>
-      <div class="converter" id="weight">
-        <h1>Poids</h1>
-        <p>   Ce convertisseur de poids vous aide à passer d’une unité à une autre : kilogrammes, livres, grammes, onces... Il est idéal pour les recettes, les colis, les achats internationaux et bien plus encore.</p>
-        <label for="weightType">Choisissez le type de conversion :</label>
-        <select id="weightType">
-          <option value="kg_lb">Kilogrammes ↔ Livres</option>
-          <option value="kg_g">Kilogrammes ↔ Grammes</option>
-          <option value="g_kg">Grammes ↔ Kilogrammes</option>
-          <option value="lb_kg">Livres ↔ Kilogrammes</option>
-        </select>
-        <input type="number" id="weightInput" placeholder="Entrez une valeur">
-        <button onclick="convertWeight()" class="cta-btn">Convertir</button>
-        <p class="result" id="weightResult"></p>
-      </div>
-    </div>
+    <h1>Politique de confidentialité</h1>
+
+<p>
+La confidentialité de nos visiteurs est très importante pour nous. Cette politique de confidentialité explique quelles données sont collectées et comment elles sont utilisées sur le site <strong>convertirfacile.com</strong>.
+</p>
+
+<h2>Cookies</h2>
+<p>
+Le site peut utiliser des cookies pour améliorer l’expérience utilisateur. Les cookies sont de petits fichiers stockés sur votre appareil, permettant de reconnaître votre navigateur lors de visites futures.
+</p>
+
+<h2>Publicités Google AdSense</h2>
+<p>
+Nous utilisons Google AdSense pour afficher des publicités. Google, en tant que fournisseur tiers, utilise des cookies pour diffuser des annonces pertinentes sur notre site. Ces cookies permettent à Google et ses partenaires d’afficher des annonces en fonction de votre navigation sur ce site et d’autres sites.
+</p>
+<p>
+Vous pouvez désactiver la personnalisation des annonces dans les paramètres de publicité de Google :  
+<a href="https://adssettings.google.com/authenticated" target="_blank" rel="noopener">https://adssettings.google.com</a>.
+</p>
+
+<h2>Collecte de données personnelles</h2>
+<p>
+Nous ne collectons pas de données personnelles directement. Toutefois, des services tiers comme Google peuvent collecter certaines informations anonymes à des fins statistiques ou publicitaires.
+</p>
+
+<h2>Liens externes</h2>
+<p>
+Le site peut contenir des liens vers d'autres sites web. Nous ne sommes pas responsables du contenu ou des pratiques de confidentialité de ces sites.
+</p>
+
+<h2>Contact</h2>
+<p>
+Pour toute question concernant cette politique de confidentialité, vous pouvez nous contacter à l’adresse suivante : <strong>ton-email@example.com</strong>.
+</p>
     <!-- Emplacement pour pub AdSense -->
     <div class="ads">
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5223640698250535"
@@ -84,14 +101,13 @@
 
     <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
       <nav style="margin-bottom: 1rem;">
-         <a href="/convertisseur-distance">Distance</a> |
+        <a href="/convertisseur-distance">Distance</a> |
         <a href="/convertisseur-temperature">Température</a> |
         <a href="/">Devises</a> |
         <a href="/convertisseur-poids">Poids</a> |
         <a href="/a-propos">À propos</a> |
-        <a href="/confidentialite">Confidentialité</a> |
+         <a href="/confidentialite">Confidentialité</a> |
         <a href="/mention-legales">Mentions légales</a>
-      </nav>
       </nav>
 
       <p>
@@ -107,11 +123,12 @@
 
   </section>
 
+
   <!-- Bloc annonnce -->
 
 
-  <script type="text/javascript" src="/js/script.js"></script>
-
+  <script type="text/javascript" src="js/script.js"></script>
+ 
 </body>
 
 </html>
