--- a/public/convertisseur-distance/index.html
+++ b/public/convertisseur-distance/index.html
@@ -58,6 +58,7 @@
             <h1>Convertisseur Tout-en-Un</h1>
             <div class="converter" id="distance">
                 <h2>Distance</h2>
+                <p>Ce convertisseur de distance vous permet de convertir rapidement entre différentes unités telles que les kilomètres, les miles, les mètres ou les pieds. Que ce soit pour des voyages, du sport ou des études, c’est un outil pratique et simple d’utilisation.</p>
                 <label for="distanceType">Choisissez le type de conversion :</label>
                 <select id="distanceType">
                     <option value="km_miles">Kilomètres ↔ Miles</option>
@@ -95,6 +96,7 @@
         <a href="/">Devises</a> |
         <a href="/convertisseur-poids">Poids</a> |
         <a href="/a-propos">À propos</a> |
+        <a href="/confidentialite">Confidentialité</a> |
         <a href="/mention-legales">Mentions légales</a>
       </nav>
             </nav>
