--- a/public/convertisseur-temperature/index.html
+++ b/public/convertisseur-temperature/index.html
@@ -58,6 +58,7 @@
             <h1>Convertisseur Tout-en-Un</h1>
             <div class="converter" id="temperature">
                 <h2>Température</h2>
+                 <p>  Convertissez facilement les températures entre Celsius, Fahrenheit et Kelvin. Ce convertisseur est utile pour la cuisine, les sciences, les voyages et tout autre usage quotidien nécessitant un changement d’unité.</p>
                 <label for="tempType">Choisissez le type de conversion :</label>
                 <select id="tempType">
                     <option value="c_f">Celsius ↔ Fahrenheit</option>
@@ -88,6 +89,7 @@
                 <a href="/">Devises</a> |
                 <a href="/convertisseur-poids">Poids</a> |
                 <a href="/a-propos">À propos</a> |
+                <a href="/confidentialite">Confidentialité</a> |
                 <a href="/mention-legales">Mentions légales</a>
             </nav>
 
