--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://convertisseur-tout-en-un.vercel.app/">
   <meta property="og:type" content="website">
   <meta name="google-adsense-account" content="ca-pub-5223640698250535">
-  <title>Convertisseur Tout-en-Un : Devises, Température, Distance et Poids</title>
+  <title>Convertisseur Tout-en-Un</title>
 
   <link rel="stylesheet" href="style/style.css">
   <link rel="icon" type="image/png" href="/favicon.png">
@@ -58,7 +58,7 @@
       <h1>Convertisseur Tout-en-Un</h1>
       <div class="converter" id="currency">
         <h2>Convertisseur de devises</h2>
-
+        <p> Utilisez ce convertisseur de devises pour obtenir les taux de change actuels entre différentes monnaies : euro, dollar, yen, livre sterling, etc. Les taux sont mis à jour régulièrement pour garantir une conversion fiable.</p>
         <label for="fromCurrency">De :</label>
         <select id="fromCurrency">
           <option value="USD">Dollar 🇺🇸</option>
@@ -112,6 +112,7 @@
         <a href="/">Devises</a> |
         <a href="/convertisseur-poids">Poids</a> |
         <a href="/a-propos">À propos</a> |
+         <a href="/confidentialite">Confidentialité</a> |
         <a href="/mention-legales">Mentions légales</a>
       </nav>
 
