modification pour google ad

--- a/public/convertisseur-distance/index.html
+++ b/public/convertisseur-distance/index.html
@@ -47,18 +47,18 @@
     <nav class="sidebar">
         <h2>Catégories</h2>
         <ul>
-             <li><a href="/convertisseur-distance">Distance</a></li>
-            <li><a href="/convertisseur-temperature">Température</a></li>
-            <li><a href="/">Devises</a></li>
-            <li><a href="/convertisseur-poids">Poids</a></li>
+             <li><a href="/convertisseur-distance">Distance 📏</a></li>
+            <li><a href="/convertisseur-temperature">Température 🌡️</a></li>
+            <li><a href="/">Devises  💵</a></li>
+            <li><a href="/convertisseur-poids">Poids ⚖️</a></li>
         </ul>
     </nav>
     <section class="section">
         <div class="main">
             <h1>Convertisseur Tout-en-Un</h1>
             <div class="converter" id="distance">
-                <h2>Distance</h2>
-                <p>Ce convertisseur de distance vous permet de convertir rapidement entre différentes unités telles que les kilomètres, les miles, les mètres ou les pieds. Que ce soit pour des voyages, du sport ou des études, c’est un outil pratique et simple d’utilisation.</p>
+                <h2>Distance 📏</h2>
+                <p class="description-convertisseur">Ce convertisseur de distance vous permet de convertir rapidement entre différentes unités telles que les kilomètres, les miles, les mètres ou les pieds. Que ce soit pour des voyages, du sport ou des études, c’est un outil pratique et simple d’utilisation.</p>
                 <label for="distanceType">Choisissez le type de conversion :</label>
                 <select id="distanceType">
                     <option value="km_miles">Kilomètres ↔ Miles</option>
@@ -91,10 +91,10 @@
 
         <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
             <nav style="margin-bottom: 1rem;">
-                <a href="/convertisseur-distance">Distance</a> |
-        <a href="/convertisseur-temperature">Température</a> |
-        <a href="/">Devises</a> |
-        <a href="/convertisseur-poids">Poids</a> |
+                <a href="/convertisseur-distance">Distance 	📏</a> |
+        <a href="/convertisseur-temperature">Température 🌡️</a> |
+        <a href="/">Devises 💵</a> |
+        <a href="/convertisseur-poids">Poids ⚖️</a> |
         <a href="/a-propos">À propos</a> |
         <a href="/confidentialite">Confidentialité</a> |
         <a href="/mention-legales">Mentions légales</a>
