--- a/public/convertisseur-poids/index.html
+++ b/public/convertisseur-poids/index.html
@@ -47,18 +47,18 @@
   <nav class="sidebar">
     <h2>Catégories</h2>
     <ul>
-       <li><a href="/convertisseur-distance">Distance</a></li>
-      <li><a href="/convertisseur-temperature">Température</a></li>
-      <li><a href="/">Devises</a></li>
-      <li><a href="/convertisseur-poids">Poids</a></li>
+       <li><a href="/convertisseur-distance">Distance 📏</a></li>
+      <li><a href="/convertisseur-temperature">Température 🌡️</a></li>
+      <li><a href="/">Devises 💵</a></li>
+      <li><a href="/convertisseur-poids">Poids  ⚖️</a></li>
     </ul>
   </nav>
   <section class="section">
     <div class="main">
       <h1>Convertisseur Tout-en-Un</h1>
       <div class="converter" id="weight">
-        <h1>Poids</h1>
-        <p>   Ce convertisseur de poids vous aide à passer d’une unité à une autre : kilogrammes, livres, grammes, onces... Il est idéal pour les recettes, les colis, les achats internationaux et bien plus encore.</p>
+        <h1>Poids ⚖️</h1>
+        <p class="description-convertisseur">Ce convertisseur de poids vous aide à passer d’une unité à une autre : kilogrammes, livres, grammes, onces... Il est idéal pour les recettes, les colis, les achats internationaux et bien plus encore.</p>
         <label for="weightType">Choisissez le type de conversion :</label>
         <select id="weightType">
           <option value="kg_lb">Kilogrammes ↔ Livres</option>
@@ -70,6 +70,11 @@
         <button onclick="convertWeight()" class="cta-btn">Convertir</button>
         <p class="result" id="weightResult"></p>
       </div>
+      <h2>Pourquoi utiliser un convertisseur de poids en ligne ?</h2>
+      <p>
+      Que ce soit pour cuisiner, envoyer un colis, faire du sport ou acheter à l’étranger, il est souvent nécessaire de convertir des unités de poids. Notre convertisseur de poids vous permet de passer facilement d’unité en unité : kilogrammes (kg), grammes (g), livres (lb) et onces (oz). 
+      Il est gratuit, rapide et ne nécessite aucune installation. Grâce à cet outil, plus besoin de se souvenir des formules complexes !
+      </p>
     </div>
     <!-- Emplacement pour pub AdSense -->
     <div class="ads">
@@ -84,10 +89,10 @@
 
     <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
       <nav style="margin-bottom: 1rem;">
-         <a href="/convertisseur-distance">Distance</a> |
-        <a href="/convertisseur-temperature">Température</a> |
-        <a href="/">Devises</a> |
-        <a href="/convertisseur-poids">Poids</a> |
+         <a href="/convertisseur-distance">Distance 📏</a> |
+        <a href="/convertisseur-temperature">Température🌡️</a> |
+        <a href="/">Devises 💵</a> |
+        <a href="/convertisseur-poids">Poids ⚖️</a> |
         <a href="/a-propos">À propos</a> |
         <a href="/confidentialite">Confidentialité</a> |
         <a href="/mention-legales">Mentions légales</a>
