--- a/public/convertisseur-temperature/index.html
+++ b/public/convertisseur-temperature/index.html
@@ -47,18 +47,18 @@
     <nav class="sidebar">
         <h2>Catégories</h2>
         <ul>
-            <li><a href="/convertisseur-distance">Distance</a></li>
-            <li><a href="/convertisseur-temperature">Température</a></li>
-            <li><a href="/">Devises</a></li>
-            <li><a href="/convertisseur-poids">Poids</a></li>
+            <li><a href="/convertisseur-distance">Distance 📏</a></li>
+            <li><a href="/convertisseur-temperature">Température🌡️</a></li>
+            <li><a href="/">Devises 💵</a></li>
+            <li><a href="/convertisseur-poids">Poids ⚖️</a></li>
         </ul>
     </nav>
     <section class="section">
         <div class="main">
             <h1>Convertisseur Tout-en-Un</h1>
             <div class="converter" id="temperature">
-                <h2>Température</h2>
-                 <p>  Convertissez facilement les températures entre Celsius, Fahrenheit et Kelvin. Ce convertisseur est utile pour la cuisine, les sciences, les voyages et tout autre usage quotidien nécessitant un changement d’unité.</p>
+                <h2>Température 🌡️</h2>
+                 <p class="description-convertisseur">Convertissez facilement les températures entre Celsius, Fahrenheit et Kelvin. Ce convertisseur est utile pour la cuisine, les sciences, les voyages et tout autre usage quotidien nécessitant un changement d’unité.</p>
                 <label for="tempType">Choisissez le type de conversion :</label>
                 <select id="tempType">
                     <option value="c_f">Celsius ↔ Fahrenheit</option>
@@ -69,6 +69,11 @@
                 <button onclick="convertTemp()" class="cta-btn">Convertir</button>
                 <p class="result" id="celsiusResult"></p>
             </div>
+            <h2>Comment convertir des températures simplement ?</h2>
+            <p>
+            Les températures peuvent être exprimées en Celsius, Fahrenheit ou Kelvin, selon les pays et les domaines. Notre convertisseur de température vous aide à passer rapidement d’une unité à une autre.
+            Par exemple, pour voyager aux États-Unis, connaître la température en Fahrenheit est essentiel. Ce convertisseur vous assure précision et simplicité, que vous soyez scientifique, étudiant ou voyageur.
+            </p>
         </div>
         <!-- Emplacement pour pub AdSense -->
         <div class="ads">
@@ -84,10 +89,10 @@
 
         <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
             <nav style="margin-bottom: 1rem;">
-                <a href="/convertisseur-distance">Distance</a> |
-                <a href="/convertisseur-temperature">Température</a> |
-                <a href="/">Devises</a> |
-                <a href="/convertisseur-poids">Poids</a> |
+                <a href="/convertisseur-distance">Distance 📏</a> |
+                <a href="/convertisseur-temperature">Température 🌡️</a> |
+                <a href="/">Devises  💵</a> |
+                <a href="/convertisseur-poids">Poids ⚖️</a> |
                 <a href="/a-propos">À propos</a> |
                 <a href="/confidentialite">Confidentialité</a> |
                 <a href="/mention-legales">Mentions légales</a>
