--- a/public/index.html
+++ b/public/index.html
@@ -47,18 +47,18 @@
   <nav class="sidebar">
     <h2>Catégories</h2>
     <ul>
-      <li><a href="/convertisseur-distance">Distance</a></li>
-      <li><a href="/convertisseur-temperature">Température</a></li>
-      <li><a href="/">Devises</a></li>
-      <li><a href="/convertisseur-poids">Poids</a></li>
+      <li><a href="/convertisseur-distance">Distance 📏</a></li>
+      <li><a href="/convertisseur-temperature">Température 🌡️</a></li>
+      <li><a href="/">Devises 💵</a></li>
+      <li><a href="/convertisseur-poids">Poids ⚖️</a></li>
     </ul>
   </nav>
   <section class="section">
     <div class="main">
       <h1>Convertisseur Tout-en-Un</h1>
       <div class="converter" id="currency">
-        <h2>Convertisseur de devises</h2>
-        <p> Utilisez ce convertisseur de devises pour obtenir les taux de change actuels entre différentes monnaies : euro, dollar, yen, livre sterling, etc. Les taux sont mis à jour régulièrement pour garantir une conversion fiable.</p>
+        <h2>Convertisseur de devises 💵</h2>
+        <p class="description-convertisseur"> Utilisez ce convertisseur de devises pour obtenir les taux de change actuels entre différentes monnaies : euro, dollar, yen, livre sterling, etc. Les taux sont mis à jour régulièrement pour garantir une conversion fiable.</p>
         <label for="fromCurrency">De :</label>
         <select id="fromCurrency">
           <option value="USD">Dollar 🇺🇸</option>
@@ -93,6 +93,12 @@
 
         <p class="result" id="conversionResult"></p>
       </div>
+      <h2>Pourquoi convertir des devises en ligne ?</h2>
+      <p>
+      Lorsque vous voyagez, achetez en ligne sur un site étranger ou suivez les marchés financiers, convertir des devises devient indispensable. 
+      Ce convertisseur de devises vous aide à connaître instantanément la valeur d’un montant entre l’euro, le dollar, la livre, le yen et bien plus. 
+      Les taux sont régulièrement mis à jour pour vous garantir une estimation fiable. Cet outil est simple, rapide et accessible à tous.
+      </p>
     </div>
     <!-- Emplacement pour pub AdSense -->
     <div class="ads">
@@ -107,10 +113,10 @@
 
     <footer style="padding: 2rem; text-align: center; font-size: 0.9rem;">
       <nav style="margin-bottom: 1rem;">
-        <a href="/convertisseur-distance">Distance</a> |
-        <a href="/convertisseur-temperature">Température</a> |
-        <a href="/">Devises</a> |
-        <a href="/convertisseur-poids">Poids</a> |
+        <a href="/convertisseur-distance">Distance 📏</a> |
+        <a href="/convertisseur-temperature">Température 🌡️</a> |
+        <a href="/">Devises 💵</a> |
+        <a href="/convertisseur-poids">Poids ⚖️</a> |
         <a href="/a-propos">À propos</a> |
          <a href="/confidentialite">Confidentialité</a> |
         <a href="/mention-legales">Mentions légales</a>
